Finish Q2 vectorization of SVM loss gradient calculation

--- a/svm.ipynb
+++ b/svm.ipynb
@@ -323,34 +323,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 31.214834 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 33.676433 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 23.387749 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -10.307204 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 12.689986 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -5.426620 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 3.537021 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -12.703563 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 20.563078 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -16.499793 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -36.213303 analytic: -36.213303, relative error: 8.328446e-12\n",
+      "numerical: 5.387248 analytic: 5.387248, relative error: 1.754793e-11\n",
+      "numerical: -43.680674 analytic: -43.680674, relative error: 7.143870e-12\n",
+      "numerical: 1.886831 analytic: 1.886831, relative error: 1.252305e-12\n",
+      "numerical: -9.017570 analytic: -9.017570, relative error: 1.235846e-11\n",
+      "numerical: 18.600102 analytic: 18.600102, relative error: 2.343689e-11\n",
+      "numerical: -4.861823 analytic: -4.861823, relative error: 4.085833e-11\n",
+      "numerical: 22.890251 analytic: 22.890251, relative error: 8.952306e-12\n",
+      "numerical: -14.472218 analytic: -14.472218, relative error: 8.703612e-12\n",
+      "numerical: 20.689663 analytic: 20.689663, relative error: 5.100348e-12\n",
       "END\n",
-      "numerical: -11.909278 analytic: -0.018698, relative error: 9.968649e-01\n",
-      "numerical: 10.652880 analytic: 0.002505, relative error: 9.995299e-01\n",
-      "numerical: -11.821611 analytic: 0.010787, relative error: 1.000000e+00\n",
-      "numerical: -44.642850 analytic: 0.004559, relative error: 1.000000e+00\n",
-      "numerical: -11.817293 analytic: 0.013017, relative error: 1.000000e+00\n",
-      "numerical: 31.401874 analytic: 0.020295, relative error: 9.987083e-01\n",
-      "numerical: 0.951944 analytic: -0.008542, relative error: 1.000000e+00\n",
-      "numerical: 17.125493 analytic: -0.005646, relative error: 1.000000e+00\n",
-      "numerical: 4.285391 analytic: -0.013515, relative error: 1.000000e+00\n",
-      "numerical: 25.952820 analytic: 0.003999, relative error: 9.996919e-01\n"
+      "numerical: -0.036578 analytic: -0.036578, relative error: 4.057459e-09\n",
+      "numerical: -3.287048 analytic: -3.287048, relative error: 1.508209e-10\n",
+      "numerical: 14.625687 analytic: 14.625687, relative error: 2.276448e-11\n",
+      "numerical: 13.485242 analytic: 13.485242, relative error: 2.294509e-11\n",
+      "numerical: -10.043469 analytic: -10.043469, relative error: 1.531844e-12\n",
+      "numerical: 9.861191 analytic: 9.861191, relative error: 2.026216e-11\n",
+      "numerical: -9.979342 analytic: -9.979342, relative error: 1.232095e-11\n",
+      "numerical: -5.130076 analytic: -5.130076, relative error: 9.689053e-12\n",
+      "numerical: 14.675310 analytic: 14.675310, relative error: 9.208900e-12\n",
+      "numerical: -5.684375 analytic: -5.684375, relative error: 1.902528e-11\n"
      ]
     }
    ],
@@ -385,14 +385,24 @@
     "### Inline Question 1:\n",
     "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
     "\n",
-    "**Your Answer:** *fill this in.*"
+    "**Your Answer:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss: 9.255120e+00 computed in 0.105062s\n",
+      "Vectorized loss: 9.255120e+00 computed in 0.002002s\n",
+      "difference: -0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Next implement the function svm_loss_vectorized; for now only compute the loss;\n",
     "# we will implement the gradient in a moment.\n",
@@ -413,9 +423,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss and gradient: computed in 0.116068s\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 500 is out of bounds for axis 0 with size 500",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-51-0079a408deda>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mtic\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_vectorized\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msvm_loss_vectorized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.000005\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mtoc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Vectorized loss and gradient: computed in %fs'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtoc\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mtic\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\LinhTa\\Programming\\COMP4901J\\assignment1\\cs231n\\classifiers\\linear_svm.py\u001b[0m in \u001b[0;36msvm_loss_vectorized\u001b[1;34m(W, X, y, reg)\u001b[0m\n\u001b[0;32m    116\u001b[0m     \u001b[0mmatCount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmatMargin\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m     \u001b[0mmatCountSumByNumTrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatCount\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 118\u001b[1;33m     \u001b[0mmatCount\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnum_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mmatCountSumByNumTrain\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    119\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    120\u001b[0m     \u001b[0mdW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatCount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 500 is out of bounds for axis 0 with size 500"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of svm_loss_vectorized, and compute the gradient\n",
     "# of the loss function in a vectorized way.\n",
