--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -20,8 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -44,9 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3073)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3073)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3073)\n",
+      "Test labels shape:  (1000,)\n",
+      "dev data shape:  (500, 3073)\n",
+      "dev labels shape:  (500,)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
     "    \"\"\"\n",
@@ -118,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
@@ -150,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
@@ -172,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
@@ -200,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
@@ -237,7 +264,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# evaluate on test set\n",
@@ -250,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Visualize the learned weights for each class\n",
@@ -287,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
