Q3 Finish function svm_loss_naive

--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -20,11 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -136,11 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.383050\n",
+      "sanity check: 2.302585\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
@@ -170,11 +188,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: 0.024836 analytic: 0.024836, relative error: 2.478620e-06\n",
+      "numerical: -0.662277 analytic: -0.662277, relative error: 9.902377e-08\n",
+      "numerical: -0.107509 analytic: -0.107509, relative error: 6.089645e-07\n",
+      "numerical: 1.155615 analytic: 1.155615, relative error: 4.319597e-08\n",
+      "numerical: 3.592437 analytic: 3.592437, relative error: 1.859358e-08\n",
+      "numerical: -4.466611 analytic: -4.466611, relative error: 9.085401e-09\n",
+      "numerical: -1.375282 analytic: -1.375282, relative error: 1.347834e-08\n",
+      "numerical: 0.440946 analytic: 0.440946, relative error: 4.807625e-08\n",
+      "numerical: -4.860164 analytic: -4.860164, relative error: 9.049753e-10\n",
+      "numerical: -0.711013 analytic: -0.711013, relative error: 9.755743e-08\n",
+      "numerical: 0.459878 analytic: 0.459878, relative error: 9.620401e-08\n",
+      "numerical: -0.411714 analytic: -0.411714, relative error: 1.569177e-07\n",
+      "numerical: -6.605280 analytic: -6.605280, relative error: 4.901705e-09\n",
+      "numerical: 0.641336 analytic: 0.641336, relative error: 1.006503e-07\n",
+      "numerical: -1.408184 analytic: -1.408184, relative error: 3.626680e-08\n",
+      "numerical: 0.297839 analytic: 0.297839, relative error: 1.269164e-07\n",
+      "numerical: -0.921644 analytic: -0.921644, relative error: 1.133084e-07\n",
+      "numerical: 2.620311 analytic: 2.620311, relative error: 1.161919e-08\n",
+      "numerical: -0.654461 analytic: -0.654462, relative error: 7.967749e-08\n",
+      "numerical: 2.234149 analytic: 2.234149, relative error: 1.566591e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
