Finish Q4 vectorized computation of loss and gradient

--- a/two_layer_net.ipynb
+++ b/two_layer_net.ipynb
@@ -184,11 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b1 max relative error: 1.000000e+00\n",
+      "W1 max relative error: 1.000000e+00\n",
+      "W2 max relative error: 1.000000e+00\n",
+      "b2 max relative error: 1.000000e+00\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.gradient_check import eval_numerical_gradient\n",
     "\n",
